# kgpy

./: .cproject  .gitattributes  .gitignore  .project  .readthedocs.yml  README.md  conf.py  environment.yml  index.rst  make.bat  meta.yml  mixin.rst  pyproject.toml  setup.py  workflow.pdf alias
.github/workflows/: conda_tests.yml  lint_and_test.yml  tests.yml
data/: iris_l2_20150615_072426_3610091469_raster_t000_r00000.fits
docs/: conf.py  index.rst
docs/_templates/: class_custom.rst
docs/kgpy/: mixin.rst
kgpy/: __init__.py  __init__test.py  _data_test.py  _distribution_test.py  _filter_test.py  _filters_test.py  _function_test.py  _interpolation_test.py  _labeled_test.py  _linspace.py  _matrix_test.py  _obs_test.py  _polynomial.py  _rebin.py  _test_sun.py  _transforms_test.py  _uncertainty_test.py  _units_test.py  _vector_test.py  atmosphere.py  atom.py  auto_axis.py  chianti.py  colormaps.py  component.py  data.py  distribution.py  dxf.py  environment.yml  filters.py  format.py  function.py  geometry.py  grid.py  interpolation.py  interpolation_test.ipynb  kgpy.rst  labeled.py  linspace.py  matrix.py  (+18 more)
kgpy/coordinate/: transform.py  translate.py
kgpy/ctis/: __init__.py  _validation_test.py  foo.ipynb  foo.py  instruments.py  overlappograms.py  test_interpolation.ipynb  validation.py  vectors.py
kgpy/dataset/: dataset.py
kgpy/doit/: doit.py
kgpy/fft/: __init__.py  freq.py  power.py  powerspec.py  random.py  test_powerspec.py
kgpy/img/: .test_spikes.py  __init__.py  _spikes_test.py  mask.py  spikes.py  spikes_test.ipynb  (+1 more)
src/: .project
(+763 files in other folders)
